crates/es-fluent-cli/tests/snapshots/cli_tests__check_complex_args_missing_variant.snap
---
source: crates/es-fluent-cli/tests/cli_tests.rs
expression: output
---
STDOUT:
Fluent FTL Checker
Discovered 2 crate(s)

STDERR:
Error: es_fluent::validate::report

  × validation found 1 error(s) and 0 warning(s)

Error: es_fluent::validate::syntax_error

  × FTL syntax error in en/en/test-app-a.ftl
    ╭─[en/test-app-a.ftl:13:5]
 11 │         [female] her stream
 12 │ 
 13 │     }.
    ·     ┬
    ·     ╰── syntax error here
 14 │ 
 15 │ gender-Male = Male
    ╰────
  help: The select expression must have a default variant
